--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gulp-if": "^2.0.2",
     "gulp-imagemin": "^4.0.0",
     "gulp-inject-partials": "^1.0.3",
+    "gulp-replace": "^0.6.1",
     "gulp-sass": "^3.1.0",
     "gulp-uglify": "^3.0.0",
     "gulp-useref": "^3.1.4"
