--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "babel-core": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "browser-sync": "^2.20.0",
+    "del": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^7.0.1",
-    "gulp-clean": "^0.3.2",
     "gulp-clean-css": "^3.9.0",
     "gulp-gh-pages": "^0.5.4",
-    "gulp-haml": "^0.2.0",
+    "gulp-haml": "^1.0.1",
     "gulp-html-beautify": "^1.0.1",
     "gulp-htmlmin": "^4.0.0",
     "gulp-if": "^2.0.2",
