--- a/package.json
+++ b/package.json
@@ -17,27 +17,33 @@
   },
   "homepage": "https://github.com/melanieseltzer/gulp-haml-boilerplate#readme",
   "devDependencies": {
+    "autoprefixer": "^7.2.5",
     "babel-core": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "browser-sync": "^2.20.0",
     "del": "^3.0.0",
+    "fancy-log": "^1.3.2",
     "gulp": "^3.9.1",
     "gulp-babel": "^7.0.1",
     "gulp-clean-css": "^3.9.0",
+    "gulp-file-include": "^2.0.1",
     "gulp-gh-pages": "^0.5.4",
     "gulp-haml": "^1.0.1",
     "gulp-html-beautify": "^1.0.1",
     "gulp-htmlmin": "^4.0.0",
     "gulp-if": "^2.0.2",
     "gulp-imagemin": "^4.1.0",
-    "gulp-inject-partials": "^1.0.3",
     "gulp-npm-dist": "^0.1.6",
+    "gulp-postcss": "^7.0.1",
     "gulp-replace": "^0.6.1",
     "gulp-sass": "^3.1.0",
-    "gulp-uglify": "^3.0.0",
+    "gulp-sourcemaps": "^2.6.4",
+    "gulp-uglify-es": "^1.0.0",
     "gulp-useref": "^3.1.4"
   },
   "dependencies": {
-    "jquery": "^3.3.1"
+    "bootstrap": "^4.0.0",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.12.9"
   }
 }
