Add gzip compression for production build

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gulp-babel": "^7.0.1",
     "gulp-clean-css": "^3.9.0",
     "gulp-gh-pages": "^0.5.4",
+    "gulp-gzip": "^1.4.2",
     "gulp-html-beautify": "^1.0.1",
     "gulp-htmlmin": "^4.0.0",
     "gulp-if": "^2.0.2",
