--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gulp-htmlmin": "^4.0.0",
     "gulp-if": "^2.0.2",
     "gulp-imagemin": "^4.1.0",
+    "gulp-plumber": "^1.2.0",
     "gulp-postcss": "^7.0.1",
     "gulp-pug": "^3.3.0",
     "gulp-sass": "^3.1.0",
